[package]
name = "solana-rpc-transactions"
version = "0.1.0"
edition = "2021"

[env]
OPENSSL_DIR ="C:/ProgramFiles/OpenSSL"
RUST_BACKTRACE= 1

[dependencies]
solana-sdk = "1.18.26"
solana-client = "1.18.26"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
reqwest = { version = "0.11", features = ["json"] }
