[package]
name = "solana-smart-contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.18.26"
solana-client = "1.18.26"
solana-program = "1.18.26"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
reqwest = { version = "0.11", features = ["json"] }
borsh = "1.5.3"

[dev-dependencies]
solana-program-test = "1.18.26"
