[package]
name = "gayser-catch-block"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.3"
solana-sdk = "1.16.17"
solana-client = "1.16.17"
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
yellowstone-grpc-client= "1.12.0+solana.1.16.17"
yellowstone-grpc-proto = "1.12.0+solana.1.16.17"
protobuf-src = "1.1.0+21.5"
futures-util = "0.3.31"
enum-iterator = "2.1.0"
